syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "AutoReservation.Service.Grpc";

package AutoReservation;

service KundeService {
    rpc GetKunden (google.protobuf.Empty) returns (KundeDtoList);
    rpc GetKunde (GetKundeRequest) returns (KundeDto);
    rpc InsertKunde (KundeDto) returns (KundeDto);
    rpc UpdateKunde (KundeDto) returns (google.protobuf.Empty);
    rpc DeleteKunde (KundeDto) returns (google.protobuf.Empty);
}

message GetKundeRequest {
    int32 id_filter = 1;
}

message KundeDtoList {
    repeated KundeDto items = 1;
}

message KundeDto {
    int32 id = 1;
    google.protobuf.Timestamp geburtsdatum = 2;
    string nachname = 3;
    string vorname = 4;
    bytes row_version = 5;
}